Updated env.sh example

--- a/scripts/env.sh.example
+++ b/scripts/env.sh.example
@@ -2,3 +2,6 @@
 
 export MISSKEY_TOKEN="qwertyuiop123ASDF"
 export MISSKET_INSTANCE="https://quietplace.xyz/"
+
+export PIXIV_ACCESS_TOKEN="oeEfeOgWTvrYemMvsfary_shnjmJVEwA"
+export PIXIV_REFRESH_TOKEN="5upbnNH4SK-kFm7cmz-eqLDfukYqTK4JcLnbnC8E95883pjvX"
