--- a/scripts/env.sh.example
+++ b/scripts/env.sh.example
@@ -1,7 +1,8 @@
 #!/bin/bash
 
 export MISSKEY_TOKEN="qwertyuiop123ASDF"
-export MISSKET_INSTANCE="https://quietplace.xyz/"
+export MISSKEY_INSTANCE="https://quietplace.xyz"
+export MISSKEY_FOLDER_ID="977okw2d1d"
 
 export PIXIV_ACCESS_TOKEN="oeEfeOgWTvrYemMvsfary_shnjmJVEwA"
 export PIXIV_REFRESH_TOKEN="5upbnNH4SK-kFm7cmz-eqLDfukYqTK4JcLnbnC8E95883pjvX"
